# dexter-kupo-rs

./: API_REFERENCE.md  Cargo.toml  README.md  vyfi_cache.json
docs/superpowers/plans/: 2026-06-06-minswap-v2-order-construction.md  2026-06-07-update-and-ref-script.md  2026-06-08-bulk-swap-request.md
docs/superpowers/specs/: 2026-06-06-minswap-order-construction-design.md  2026-06-08-bulk-swap-request-design.md
examples/: live_bulk.rs  live_cancel.rs  live_swap.rs  live_update.rs
src/: address.rs  cache.rs  kupo.rs  lib.rs  main.rs
src/dex/: cbor.rs  chadswap.rs  cswap.rs  minswap_stable.rs  minswap_v1.rs  minswap_v2.rs  minswap_v2_swap.rs  mod.rs  sundaeswap_v1.rs  sundaeswap_v3.rs  swap.rs  vyfi_bar.rs  vyfinance.rs  wingriders.rs  wingriders_v2.rs
src/models/: asset.rs  liquidity_pool.rs  mod.rs  order.rs  stable_pool.rs  utxo.rs
src/plutus/: data.rs  mod.rs
src/requests/: bulk.rs  cancel.rs  mod.rs  swap.rs  types.rs  update.rs
src/utils/: mod.rs
tests/: bulk_request.rs  cancel_request.rs  minswap_v2_golden.rs  swap_request_golden.rs  update_request.rs
