[package]
name = "dexter-kupo-rs"
version = "0.7.0"
edition = "2021"
description = "Rust library for interacting with Cardano DEX protocols via Kupo"
license = "MIT"
repository = "https://github.com/danielNg25/dexter-kupo-rs"
keywords = ["cardano", "dex", "defi", "kupo", "lucid"]
authors = ["Daniel Ng <danielng250@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"
ciborium = "0.2"
bech32 = "0.11"

[lib]
name = "dexter_kupo_rs"
path = "src/lib.rs"

[[bin]]
name = "dexter-kupo-rs"
path = "src/main.rs"

[features]
default = []
export = []

[dev-dependencies]
dotenvy = "0.15"
pallas-primitives = "1.0"
pallas-codec = "1.0"
pallas-crypto = "1.0"
pallas-addresses = "1.0"
pallas-txbuilder = "1.0"
bip39 = "2"
ed25519-bip32 = "0.4"
pbkdf2 = "0.12"
sha2 = "0.10"

[[example]]
name = "live_swap"
path = "examples/live_swap.rs"

[[example]]
name = "live_cancel"
path = "examples/live_cancel.rs"

[[example]]
name = "live_update"
path = "examples/live_update.rs"
